Add journal query endpoint
