# cmd/server/main.go
@@ -114,6 +114,9 @@ func main() {
 			r.Get("/", h.ListTasks)
 			r.Post("/", h.CreateTask)
 		})
+		r.Route("/journal", func(r chi.Router) {
+			r.Get("/", h.ListJournals)
+		})
 		r.Route("/journals", func(r chi.Router) {
 			r.Get("/tags", h.ListJournalTags)
 			r.Get("/{year}/{month}", h.ListJournalsByMonth)
